<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tic Tac Toe game</string>
    <string name="activity_name_board">Tic Tac Toe game board</string>
    
    <string name="activity_main_description">This is simple Tic Tac Toe game done simply. So type in your names and start playing by pressing START button. As simple as that.</string>
    <string name="activity_main_player_X_enter_name">X player\'s name</string>
    <string name="activity_main_player_O_enter_name">O player\'s name</string>
    <string name="activity_main_player_X_hint_name">X player name here</string>
    <string name="activity_main_player_O_hint_name">O player name here</string>
    <string name="activity_main_button_text">START PLAYING</string>
    <string name="activity_main_error_empty_name_field">name can not be empty</string>
    
    <string name="activity_board_description">In this demo app X player makes the first move</string>
    <string name="activity_board_button_next_game">PLAY AGAIN</string>
    <string name="activity_board_button_text">END MATCH</string>
    <string name="activity_board_xplayer_description">X Player</string>
    <string name="activity_board_oplayer_description">O Player</string>
    <string name="activity_board_description_winner_is">Winner is\u0020</string>
    <string name="activity_board_description_no_winner_this_time">It\'s a draw, no winner in this game</string>
    <string name="activity_board_total_scores">total scores:\u0020</string>
    <string name="activity_board_has_the_first_move">\u0020plays first</string>
    
    <string name="activity_scoreboard_first_tab_label">The biggest winners</string>
    <string name="activity_scoreboard_second_tab_label">The biggest losers</string>
    
    
</resources>
