<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout 
        android:id="@+id/activity_board_wrapper_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true" 
    	android:focusableInTouchMode="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        
		<TextView 
		    android:id="@+id/activity_board_textview_board_description"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/generalMarginBottom"
		    android:text="@string/activity_board_description"
		    android:theme="@style/TicTacToeTextViewStyle"/>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="center_horizontal">
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		    <Button 
		    android:id="@+id/activity_board_button_1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="center_horizontal">
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		    <Button 
		    android:id="@+id/activity_board_button_4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_6"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="@dimen/generalMarginBottom">
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		    <Button 
		    android:id="@+id/activity_board_button_7"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_8"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <Button 
		    android:id="@+id/activity_board_button_9"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeBoardButtonStyle"/>
		    
		    <LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"></LinearLayout>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/activity_board_xplayer_linlayout_container"
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:orientation="vertical"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="@dimen/generalMarginBottom">
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_xplayer_description"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/activity_board_xplayer_description"
		    android:theme="@style/TicTacToeTextViewNameDescriptionsStyle"/>
		    
		    <LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:orientation="horizontal">
		        
		    <TextView 
		    android:id="@+id/activity_board_textview_xplayer_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"/>   
		    
		    <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"></LinearLayout>
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_xplayer_current_wins"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewResultsStyle"
		    android:layout_marginRight="@dimen/currentResultMarginRight"/> 
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_xplayer_prev_wins"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"
		    android:layout_marginRight="@dimen/prevResultMarginRight"/> 
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_xplayer_prev_loses"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"/> 
		        
		    </LinearLayout>
		    
		</LinearLayout>
		
		<LinearLayout 
		    android:id="@+id/activity_board_oplayer_linlayout_container"
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:orientation="vertical"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="@dimen/generalMarginBottom">
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_oplayer_description"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/activity_board_oplayer_description"
		    android:theme="@style/TicTacToeTextViewNameDescriptionsStyle"/>
		    
		    <LinearLayout 
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:orientation="horizontal">
		        
		    <TextView 
		    android:id="@+id/activity_board_textview_oplayer_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"/>   
		    
		    <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"></LinearLayout>
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_oplayer_current_wins"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewResultsStyle"
		    android:layout_marginRight="@dimen/currentResultMarginRight"/> 
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_oplayer_prev_wins"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"
		    android:layout_marginRight="@dimen/prevResultMarginRight"/> 
		    
		    <TextView 
		    android:id="@+id/activity_board_textview_oplayer_prev_loses"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:theme="@style/TicTacToeTextViewStyle"/> 
		        
		    </LinearLayout>
		    
		</LinearLayout>
		
		
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"></LinearLayout>
		
		<Button 
		    android:id="@+id/activity_board_button_play_next_game"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/activity_board_button_next_game"
		    android:theme="@style/TicTacToeButtonStyle"/>
		
		<Button 
		    android:id="@+id/activity_board_button_end_match"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/activity_board_button_text"
		    android:theme="@style/TicTacToeButtonStyle"/>
        
    </LinearLayout>

</RelativeLayout>
